tests/snapshots/eval_tests__ml1_25.snap
---
source: tests/eval_tests.rs
expression: "&result"
---
 3 + 5 evalto 8 by E-Plus {
     3 evalto 3 by E-Int {
    };
     5 evalto 5 by E-Int {
    };
     3 plus 5 is 8 by B-Plus {};
};
