tests/snapshots/eval_tests__ml1_26.snap
---
source: tests/eval_tests.rs
expression: "&result"
---
8 - 2 - 3 evalto 3 by E-Minus {
    8 - 2 evalto 6 by E-Minus {
        8 evalto 8 by E-Int {
        };
        2 evalto 2 by E-Int {
        };
        8 minus 2 is 6 by B-Minus {};
    };
    3 evalto 3 by E-Int {
    };
    6 minus 3 is 3 by B-Minus {};
};
