tests/snapshots/eval_tests__ml1_27.snap
---
source: tests/eval_tests.rs
expression: "&result"
---
 (4 + 5) * (1 - 10) evalto -81 by E-Times {
     (4 + 5) evalto 9 by E-Plus {
         4 evalto 4 by E-Int {
        };
         5 evalto 5 by E-Int {
        };
         4 plus 5 is 9 by B-Plus {};
    };
     (1 - 10) evalto -9 by E-Minus {
         1 evalto 1 by E-Int {
        };
         10 evalto 10 by E-Int {
        };
         1 minus 10 is -9 by B-Minus {};
    };
     9 times -9 is -81 by B-Times {};
};
